--- a/ant-design-vue-pro-3.0.3/jsconfig.json
+++ b/ant-design-vue-pro-3.0.3/jsconfig.json
@@ -3,9 +3,9 @@
     "target": "es6",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src\\*"]
+      "@/*": ["src/*"]
     }
   },
   "exclude": ["node_modules", "dist"],
-  "include": ["src\\**\\*"]
+  "include": ["src/**/*"]
 }
