--- a/ant-design-vue-pro-3.0.3/package.json
+++ b/ant-design-vue-pro-3.0.3/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "@ant-design-vue/pro-layout": "^1.0.11",
     "@antv/data-set": "^0.10.2",
+    "@types/echarts": "^5.0.0",
     "ant-design-vue": "^1.7.6",
     "axios": ">=0.21.1",
+    "china-map-data": "^1.0.4",
     "core-js": "^3.1.2",
-    "echart": "^0.1.3",
+    "echarts": "5",
+    "echarts-china-cities-js": "^0.1.1",
     "enquire.js": "^2.1.6",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
